force-app/main/default/objects/Vehiclee__c/Vehiclee__c.object-meta.xml
<CustomObject>
    <label>Vehiclee</label>
    <nameField>
        <displayFormat>VEH-{00000}</displayFormat>
        <label>Vehiclee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehiclees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>