force-app/main/default/objects/Vehiclee__c/fields/Current_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Current_Mileage__c</fullName>
    <label>Current Mileage</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>