force-app/main/default/objects/Vehiclee__c/fields/Customerr__c.field-meta.xml
<CustomField>
    <fullName>Customerr__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customerr</label>
    <referenceTo>Customerr__c</referenceTo>
    <relationshipLabel>Vehiclees</relationshipLabel>
    <relationshipName>Vehiclees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>