force-app/main/default/objects/Vehiclee__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maruti Suzuki</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Tata</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Mahindra</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>Volkswagen</fullName>
            </value>
            <value>
                <fullName>Skoda</fullName>
            </value>
            <value>
                <fullName>Renault</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>