force-app/main/default/objects/Vehiclee__c/fields/Manufacturing_Year__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Year__c</fullName>
    <label>Manufacturing Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>