force-app/main/default/objects/Vehiclee__c/fields/Other_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Fuel_Type__c</fullName>
    <label>Other Fuel Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>