force-app/main/default/objects/Vehiclee__c/fields/Other_Make__c.field-meta.xml
<CustomField>
    <fullName>Other_Make__c</fullName>
    <label>Other Make</label>
    <length>50</length>
    <type>Text</type>
</CustomField>