force-app/main/default/objects/Vehiclee__c/fields/Other_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Vehicle_Type__c</fullName>
    <label>Other Vehicle Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>