force-app/main/default/objects/Vehiclee__c/fields/Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Status__c</fullName>
    <label>Vehicle Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Under Repair</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Scrapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>