force-app/main/default/objects/Vehiclee__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hatchback</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>MUV</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>