force-app/main/default/objects/Vehiclee__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <label>VIN</label>
    <length>17</length>
    <required>true</required>
    <type>Text</type>
</CustomField>