force-app/main/default/objects/Vehiclee__c/validationRules/Manufacturing_Year_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Manufacturing_Year_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Manufacturing_Year__c &gt; YEAR(TODAY())</errorConditionFormula>
    <errorDisplayField>Manufacturing_Year__c</errorDisplayField>
    <errorMessage>Manufacturing Year cannot be greater than the current year</errorMessage>
</ValidationRule>