force-app/main/default/objects/Vehiclee__c/validationRules/Mileage_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Mileage_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Current_Mileage__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Current_Mileage__c</errorDisplayField>
    <errorMessage>Current Mileage cannot be negative</errorMessage>
</ValidationRule>