force-app/main/default/objects/Vehiclee__c/validationRules/Other_Fuel_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Fuel_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Fuel_Type__c, &quot;Other&quot;),
    ISBLANK(Other_Fuel_Type__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Fuel_Type__c</errorDisplayField>
    <errorMessage>Please enter the Other Fuel Type</errorMessage>
</ValidationRule>