force-app/main/default/objects/Vehiclee__c/validationRules/Other_Make_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Make_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Make__c, &quot;Other&quot;),
    ISBLANK(Other_Make__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Make__c</errorDisplayField>
    <errorMessage>Please enter the Other Make.</errorMessage>
</ValidationRule>