force-app/main/default/objects/Vehiclee__c/validationRules/Other_Vehicle_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Vehicle_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Vehicle_Type__c, &quot;Other&quot;),
    ISBLANK( Other_Vehicle_Type__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Vehicle_Type__c</errorDisplayField>
    <errorMessage>Please enter the other Vehicle Type</errorMessage>
</ValidationRule>