force-app/main/default/objects/Vehiclee__c/validationRules/Purchase_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Purchase_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Purchase_Date__c</errorDisplayField>
    <errorMessage>Purchase Date cannot be in the future</errorMessage>
</ValidationRule>