force-app/main/default/objects/Vehiclee__c/validationRules/Purchase_Date_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Date_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Purchase_Date__c)),
    YEAR(Purchase_Date__c) &lt; Manufacturing_Year__c
)</errorConditionFormula>
    <errorDisplayField>Purchase_Date__c</errorDisplayField>
    <errorMessage>Purchase date cannot be earlier than vehicle&apos;s manufacturing year</errorMessage>
</ValidationRule>